// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Table/TableHeader CollapseHeader smoke-test 1`] = `
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-xpjyhy-MuiPaper-root-MuiTableContainer-root">
  <thead class="MuiTableHead-root css-15wwp11-MuiTableHead-root">
    <tr class="MuiTableRow-root MuiTableRow-head css-dvunen-MuiTableRow-root">
      <th class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-epgjbe-MuiTableCell-root"
          scope="col"
      >
      </th>
      <th class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-epgjbe-MuiTableCell-root"
          scope="col"
      >
        Header1
      </th>
      <th class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-epgjbe-MuiTableCell-root"
          scope="col"
      >
        Header2
      </th>
      <th class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-epgjbe-MuiTableCell-root"
          scope="col"
      >
        Header3
      </th>
    </tr>
  </thead>
  <tr class="MuiTableRow-root css-dvunen-MuiTableRow-root">
    <td class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root">
    </td>
    <td class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root">
      Value1
    </td>
    <td class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root">
      Value2
    </td>
    <td class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root">
      Value3
    </td>
  </tr>
</div>
`;

exports[`components/Table/TableHeader Primary smoke-test 1`] = `
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-xpjyhy-MuiPaper-root-MuiTableContainer-root">
  <thead class="MuiTableHead-root css-15wwp11-MuiTableHead-root">
    <tr class="MuiTableRow-root MuiTableRow-head css-dvunen-MuiTableRow-root">
      <th class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-epgjbe-MuiTableCell-root"
          scope="col"
      >
        Header1
      </th>
      <th class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-epgjbe-MuiTableCell-root"
          scope="col"
      >
        Header2
      </th>
      <th class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium css-epgjbe-MuiTableCell-root"
          scope="col"
      >
        Header3
      </th>
    </tr>
  </thead>
  <tr class="MuiTableRow-root css-dvunen-MuiTableRow-root">
    <td class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root">
      Value1
    </td>
    <td class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root">
      Value2
    </td>
    <td class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root">
      Value3
    </td>
  </tr>
</div>
`;
